# DebateWiki

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
DebateWiki/: __init__.py  app.py  models.py  schemas.py
DebateWiki/cli/: start.py
DebateWiki/models/: __init__.py
DebateWiki/versions/v1/: __init__.py  users.py
Frontend/: README.md  nuxt.config.js  package-lock.json  package.json
docs/: conf.py
docs/api/: DebateWiki.cli.rst  DebateWiki.rst  modules.rst
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: Footer.vue  Navigation.vue
frontend/src/store/: index.ts  theme.ts
frontend/src/views/: Home.vue  Login.vue  Register.vue
