[tool.poetry]
name = "DebateWiki"
version = "0.1.0"
description = "A wiki that only allows valid arguments to make it into its pages."
authors = ["Taven <taven@opendebates.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/OpenDebates/DebateWiki"
repository = "https://github.com/OpenDebates/DebateWiki"
documentation = "https://debatewiki.readthedocs.io"
keywords = [
    "wiki",
    "debate",
    "fastapi",
    "logic"
]
classifiers = [
    "Development Status :: 1 - Planning",
	"Environment :: Web Environment",
	"Framework :: FastAPI",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: Apache Software License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki"
]
packages = [
    { include = "DebateWiki" }
]
include = [
    ".bumpversion.cfg",
    ".coveragerc",
    ".editorconfig",
    ".readthedocs.yml",
    "AUTHORS.rst",
    "CODE_OF_CONDUCT.md",
    "MANIFEST.in",
    "docs/*",
    "tests/*",
    "tox.ini",
    "poetry.lock",
    "frontend/*"
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
schema = "^0.7.5"
uvloop = {version = "^0.16.0", optional = true}
Jinja2 = "^3.1.2"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
asyncpg = "^0.25.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.1"}
aerich = "^0.6.3"
loguru = "^0.6.0"
fastapi-users = {extras = ["tortoise-orm"], version = "^10.0.6"}

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
twine = "^4.0.0"
codecov = "^2.1.12"
bump2version = "^1.0.1"
black = "^22.3.0"

[tool.poetry.scripts]
DebateWiki = 'DebateWiki.__main__:main'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.rst --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
